# DesktopSpriter

./: CMakeLists.txt  Nahida.cpp  Nahida.h  README.md  Sprite.cpp  Sprite.h  Spriter.cpp  Spriter.h  main.cpp
